 - Use x as initial guess in Krylov solvers (PETSc, uBLAS, ITL)
 - Add new function errornorm()
 - Add harmonic ALE mesh smoothing
 - Refinements of Graph class
 - Add CholmodCholeskySlover (direct solver for symmetric matrices)
 - Implement application of Dirichlet boundary conditions within assembly loop
 - Improve efficiency of SparsityPattern
 - Allow a variable number of smoothings
 - Add class Table for pretty-printing of tables
 - Add experimental MTL4 linear algebra backend
 - Add OutflowFacet to SpecialFunctions for DG transport problems
 - Remove unmaintained OpenDX file format
 - Fix problem with mesh smoothing near nonconvex corners
 - Simple projection of functions in Python
 - Add file format: XYZ for use with Xd3d
 - Add built-in meshes: UnitCircle, Box, Rectangle, UnitSphere
0.8.0 [2008-06-23]
 - Fix input of matrix data from XML
 - Add function normalize()
 - Integration with VMTK for reading DOLFIN XML meshes produced by VMTK
 - Extend mesh XML format to handle boundary indicators
 - Add support for attaching arbitrarily named data to meshes
 - Add support for dynamically choosing the linear algebra backend
 - Add Epetra/Trilinos linear solvers
 - Add setrow() to matrix interface
 - Add new solver SingularSolver for solving singular (pressure) systems
 - Add MeshSize::min(), max() for easy computation of smallest/largest mesh size
 - LinearSolver now handles all backends and linear solvers
 - Add access to normal in Function, useful for inflow boundary conditions
 - Remove GMRES and LU classes, use solve() instead
 - Improve solve() function, now handles both LU and Krylov + preconditioners
 - Add ALE mesh interpolation (moving mesh according to new boundary coordinates)
0.7.3 [2008-04-30]
 - Add support for Epetra/Trilinos
 - Bug fix for order of values in interpolate_vertex_values, now according to UFC
 - Boundary meshes are now always oriented with respect to outward facet normals
 - Improved linear algebra, both in C++ and Python